--- a/about.html
+++ b/about.html
@@ -52,6 +52,10 @@
             border: 1px solid lime;
         }
 
+        .navbar-toggler-icon {
+            background-color: lime; /* Warna lime untuk ikon hamburger */
+        }
+
         .accordion-button {
             color: lime !important;
         }
