--- a/ann.html
+++ b/ann.html
@@ -26,10 +26,18 @@
             color: lime !important;
         }
 
+        .navbar-toggler {
+            background-color: #008000; /* Warna hijau untuk tema hacker */
+            border: 1px solid #008000;
+        }
+
+        .navbar-toggler-icon {
+            background-color: lime; /* Warna lime untuk ikon hamburger */
+        }
+
         .card {
             background-color: #222;
             color: lime;
-            margin-top: 20px;
         }
 
         .card-header {
@@ -39,11 +47,6 @@
 
         .card-body {
             background-color: #333;
-        }
-
-        .btn-success {
-            background-color: #4CAF50;
-            color: white;
         }
 
         .accordion-item {
@@ -60,47 +63,42 @@
             background-color: lime;
         }
 
-        #contact-form {
-        background-color: #111;
-        color: lime;
-        padding: 20px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        border: 1px solid lime;
-        border-radius: 5px;
-        width: 70%; /* Menambahkan properti lebar */
-        margin-left: auto;
-        margin-right: auto;
+        #clock {
+            color: lime;
         }
 
-        #contact-form label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        #contact-form input,
-        #contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-        }
-
-        #contact-form button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        #contact-form button:hover {
-            background-color: #45a049;
+        #calendar {
+            color: lime;
         }
 
         #copyright {
             background: #111;
+            color: lime;
+        }
+
+        /* Theme hacker specific styles */
+        code {
+            color: yellow;
+        }
+
+        .btn-outline-success {
+            border-color: lime;
+            color: lime;
+        }
+
+        .btn-outline-success:hover {
+            background-color: lime;
+            color: #000;
+        }
+
+        .form-control {
+            background-color: #111;
+            border-color: lime;
+            color: lime;
+        }
+
+        .form-control:focus {
+            background-color: #222;
             color: lime;
         }
     </style>
