--- a/about.html
+++ b/about.html
@@ -52,6 +52,12 @@
             border: 1px solid lime;
         }
 
+        .navbar-toggler {
+            background-color: #008000; /* Warna hijau untuk tema hacker */
+            border: 1px solid #008000;
+        }
+
+
         .navbar-toggler-icon {
             background-color: lime; /* Warna lime untuk ikon hamburger */
         }
