--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
             <div class="card-header">
                 Contact Form
             </div>
-            <form action="https://formspree.io/f/myyrzvwg" method="POST">
+            <form action="https://formspree.io/f/mayrnkkl" method="POST">
                 <label for="name">UCP Name:</label>
                 <input type="text" id="name" name="name" placeholder="Masukan nama UCP anda..." required>
 
