--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="goodside/gov.html">Magnefica Government</a></li>
-                        <li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>
+                        <!--<li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>-->
                         <li><a class="dropdown-item" href="goodside/police.html">Magnefica Police</a></li>
                         <li><a class="dropdown-item" href="goodside/medic.html">Magnefica Medic</a></li>
                         <li><a class="dropdown-item" href="goodside/foodtrader.html">Magnefica Food trader</a></li>
@@ -169,7 +169,7 @@
                         <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
                         <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
                         <li><a class="dropdown-item" href="perusahaan-swasta.html">Perusahaan Swasta</a></li>
-                        <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
+                        <li><a class="dropdown-item" href="https://discord.com/channels/1127282771107250199/1127307109592203365">Rules</a>
                     </ul>
                 </li>
             </ul>
@@ -237,8 +237,8 @@
                         <div class="card m-2 p-4">
                             <div class="card-body">
                                 <h5 class="card-title">Developer SAMP</h5>
-                                <p class="card-text">Hello, my nickname is Riel. I'm a Developer SAMP.</p>
-                                <a href="https://wa.me/6285768221500?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
+                                <p class="card-text">Hello, my nickname is Alex. I'm a Developer SAMP.</p>
+                                <a href="https://wa.me/6289668076401?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
                             </div>
                         </div>
                     </div>
@@ -253,13 +253,13 @@
             </div>
             <form action="https://formspree.io/f/myyrzvwg" method="POST">
                 <label for="name">UCP Name:</label>
-                <input type="text" id="name" name="name" placeholder="Masukan nama UCP anda..." required>
+                <input type="text" id="name" name="name-MF" placeholder="Masukan nama UCP anda..." required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Masukan email anda..." required>
+                <input type="email" id="email" name="email-MF" placeholder="Masukan email anda..." required>
 
                 <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" placeholder="Tuliskan sesuatu disini..." required></textarea>
+                <textarea id="message" name="message-MF" rows="4" placeholder="Tuliskan sesuatu disini..." required></textarea>
 
                 <button type="submit">Submit</button>
             </form>
