--- a/ann.html
+++ b/ann.html
@@ -133,7 +133,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="goodside/gov.html">Magnefica Government</a></li>
-                        <li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>
+                        <!--<li><a class="dropdown-item" href="goodside/fbi.html">Magnefica FBI</a></li>-->
                         <li><a class="dropdown-item" href="goodside/police.html">Magnefica Police</a></li>
                         <li><a class="dropdown-item" href="goodside/medic.html">Magnefica Medic</a></li>
                         <li><a class="dropdown-item" href="goodside/foodtrader.html">Magnefica Food trader</a></li>
@@ -156,7 +156,7 @@
                         <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
                         <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
                         <li><a class="dropdown-item" href="perusahaan-swasta.html">Perusahaan Swasta</a></li>
-                        <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
+                        <li><a class="dropdown-item" href="https://discord.com/channels/1127282771107250199/1127307109592203365">Rules</a>
                     </ul>
                 </li>
             </ul>
