--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -49,7 +49,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="gov.html">Magnefica Government</a></li>
-                <li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>
+                <!--<li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>-->
                 <li><a class="dropdown-item" href="police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="medic.html">Magnefica Medic</a></li>
                 <li><a class="dropdown-item" href="foodtrader.html">Magnefica Food trader</a></li>
@@ -71,7 +71,7 @@
                 <li><a class="dropdown-item" href="../moreinformation/admininformation.html">Admin information</a></li>
                 <li><a class="dropdown-item" href="../moreinformation/event.html">Event</a></li>
                 <li><a class="dropdown-item" href="../moreinformation/donationinformation.html">Donation information</a></li>
-                <li><a class="dropdown-item" href="../moreinformation/rules.html">Rules</a></li>
+                <li><a class="dropdown-item" href="https://discord.com/channels/1127282771107250199/1127307109592203365">Rules</a>
               </ul>
             </li>
           </ul>
@@ -99,14 +99,14 @@
         <tbody>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
-            <td><b style="color:darkorange;">Ucin Vird</b></td>
-            <td><b style="color:darkgray;">Ucin</b></td>
+            <td><b style="color:darkorange;">Nicholas William</b></td>
+            <td><b style="color:purple;">SilumanKatak</b></td>
             <td><b style="color:darkorange;">Governor</b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><img src="../img/gov/government-logo.png" style="max-width:30px;"></th>
-            <td><b style="color:darkorange;">Nicholas Scout</b></td>
-            <td><b style="color:purple;">SilumanKatak</b></td>
+            <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Deputy Governor</b></td>
           </tr>
           <tr class="table-light">
