--- a/goodside/police.html
+++ b/goodside/police.html
@@ -49,7 +49,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="gov.html">Magnefica Government</a></li>
-                <li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>
+                <!--<li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>-->
                 <li><a class="dropdown-item" href="police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="medic.html">Magnefica Medic</a></li>
                 <li><a class="dropdown-item" href="foodtrader.html">Magnefica Food trader</a></li>
@@ -71,7 +71,7 @@
                 <li><a class="dropdown-item" href="../moreinformation/admininformation.html">Admin information</a></li>
                 <li><a class="dropdown-item" href="../moreinformation/event.html">Event</a></li>
                 <li><a class="dropdown-item" href="../moreinformation/donationinformation.html">Donation information</a></li>
-                <li><a class="dropdown-item" href="../moreinformation/rules.html">Rules</a></li>
+                <li><a class="dropdown-item" href="https://discord.com/channels/1127282771107250199/1127307109592203365">Rules</a>
               </ul>
             </li>
           </ul>
