--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -49,7 +49,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
-                <li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>
+                <!--<li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>-->
                 <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
                 <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
@@ -71,7 +71,7 @@
                 <li><a class="dropdown-item" href="admininformation.html">Admin information</a></li>
                 <li><a class="dropdown-item" href="event.html">Event</a></li>
                 <li><a class="dropdown-item" href="donationinformation.html">Donation information</a></li>
-                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                <li><a class="dropdown-item" href="https://discord.com/channels/1127282771107250199/1127307109592203365">Rules</a>
               </ul>
             </li>
           </ul>
