--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -49,7 +49,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
-                <li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>
+                <!--<li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>-->
                 <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
                 <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
