--- a/ann.html
+++ b/ann.html
@@ -175,7 +175,7 @@
           <p class="mb-0">This posted in <b>17 January 2024</b>.</p>
         </div>
         <div class="alert alert-success" role="alert">
-          <h4 class="alert-heading">Server Maintence!</h4>
+          <h4 class="alert-heading">Server Online!</h4>
           <p>Horee! server dalam keadaan online, silahkan masuk dan selamat bersenang-senang.</p>
           <hr>
           <p class="mb-0">This posted in <b>08 January 2024</b>.</p>
