--- a/update.html
+++ b/update.html
@@ -173,6 +173,21 @@
       <!--Content-->
 
         <div class="alert alert-success" role="alert">
+          <h5 class="card-title">Update Magnefica v0.4</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update All</div>
+                <i class='bx bxs-upvote' style="color:blue;"></i> Update semua sistem di kota. (Ganti GM)
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+          </ol>
+          <hr>
+          <p class="mb-0">This posted in <b>18 March 2024</b>.</p>
+        </div>
+
+        <div class="alert alert-success" role="alert">
           <h5 class="card-title">Update Magnefica v0.3</h5>
           <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
