--- a/perusahaan-swasta.html
+++ b/perusahaan-swasta.html
@@ -295,23 +295,31 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">No Reg</th>
+          <th scope="col">Peringkat</th>
           <th scope="col">Perusahaan</th>
           <th scope="col">Owner</th>
-          <th scope="col">Kontak</th>
+          <th scope="col">Jumblah Anggota</th>
         </tr>
       </thead>
       <tbody id="memberTableBody">
         <tr>
-          <td>170124</td>
+          <td>1</td>
           <td>NW-Company</td>
-          <td>Nicholas Scout</td>
-          <td> - </td>
+          <td>Nicholas William</td>
+          <td> 15 </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Samsong</td>
+          <td>Lee Byongsul</td>
+          <td> 7 </td>
         </tr>
         <!-- Tambahkan lebih banyak baris sesuai kebutuhan menggunakan <tr></tr> -->
       </tbody>
     </table>
+    <hr><h3>Administrator Perusahaan Negara</h3> <hr>Untuk mendaftarkan perusahaan resmi kepada negara, kekayaan owner wajib minimal $500.000.00 dan memiliki izin resmi dari pemerintahan. <br>Untuk membuat lisensi surat izin resmi perusahaan anda bisa klik LINK dibawah ini. <br> <a href="#">LINK</a>
   </div>
+  <br><br><br><br><br>
 
 <!--copyright-->
 
